--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -482,7 +482,7 @@ section {
 }
 
 .services .card .card-date {
-  padding: 0 20px;
+  padding: 20px 20px 0;
   font-size: 12px;
   color: var(--color-verde);
   text-transform: uppercase;
